--- a/pom.xml
+++ b/pom.xml
@@ -5,17 +5,46 @@
 	<artifactId>CustomWebapp</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
-	<properties>
-		<selenium.version>2.33.0</selenium.version>
-		<easytest.version>1.2.5</easytest.version>
-	</properties>
+	<packaging>war</packaging>
+
+	<build>
+		<resources>
+			<resource>
+				<directory>${basedir}/src/main/resources</directory>
+			</resource>
+		</resources>
+
+		<!-- Maven will append the version to the finalName (which is the name 
+			given to the generated war, and hence the context root) -->
+		<finalName>${project.artifactId}</finalName>
+		<plugins>
+			<!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
+				processors -->
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.1</version>
+				<configuration>
+					<source>1.6</source>
+					<target>1.6</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
+					<failOnMissingWebXml>true</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 	<dependencies>
 		<!-- JODD -->
 		<dependency>
 			<groupId>org.jodd</groupId>
 			<artifactId>jodd-madvoc</artifactId>
-			<version>3.4.7</version>
+			<version>3.4.8</version>
 		</dependency>
 
 		<!-- Logging -->
@@ -35,24 +64,14 @@
 			<version>1.5.11</version>
 		</dependency>
 
-		<!-- Servlet -->
+		<!-- Javax -->
 		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>servlet-api</artifactId>
-			<version>2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet.jsp</groupId>
-			<artifactId>jsp-api</artifactId>
-			<version>2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>jstl</artifactId>
-			<version>1.2</version>
+			<groupId>javax</groupId>
+			<artifactId>javaee-api</artifactId>
+			<version>6.0</version>
 		</dependency>
 
-		<!-- Additional -->		
+		<!-- Additional -->
 		<dependency>
 			<groupId>asm</groupId>
 			<artifactId>asm</artifactId>
